<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.CreateQpActivity">

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

        <TextView
                android:text="@string/quiz_name"
                style="@style/subHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/et_qp_name"
                android:hint="@string/quiz_name"
                android:typeface="monospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/instruction"
                style="@style/subHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/et_qp_instruction"
                android:hint="@string/instruction"
                android:typeface="monospace"
                android:minLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/max_time_in_minutes"
                style="@style/subHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/et_qp_maxtime"
                android:hint="@string/max_time_in_minutes"
                android:maxLines="1"
                android:typeface="monospace"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_new_question"
                android:text="@string/add_new_question"
                style="@style/FirebaseUI.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_questions"
                tools:listitem="@layout/mcq_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/save_quiz"
                android:text="@string/save_quiz"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>